# ITMO_LABS

./: .gitignore  README.md
course1/Algorithms and Data Structures/LabASD1/: Antiqs.java  BinSearch.java  Garland.java  Heap.java  HeapSort.java  Kth.java  Queue.java  RadixSort.java  Strange.java  Style.java  Style2.java  Trains.java
course1/Algorithms and Data Structures/LabASD2/: A.java  B.java  C.java  D.java  E.java  F.java  G.java  H.java  I.java  J.java  K.java
course1/Algorithms and Data Structures/LabASD3/: A.java  B.java  C.java  Choose.java  D.java  E.java  F.java  G.java  H.java  K.java  L.java
course1/Algorithms and Data Structures/LabASD4/: Crypto_E.java  Painter_D.java  Parking_L.java  Rmq2_C.java  Rsq_B.java  Sparse_F.java  Sum0_A.java
course1/Algorithms and Data Structures/LabASD6/: main.cpp
course1/Discrete math/LabDM1/: FullKit.java  Horn.java  Krom.java  Polynom.java
course1/Discrete math/LabDM2/: BWT.java  Huffman.java  LZW.java  MTF.java
course1/Discrete math/LabDM3/: T_1.java  T_10.java  T_11.java  T_12.java  T_13.java  T_14.java  T_15.java  T_16.java  T_17.java  T_18.java  T_19.java  T_2.java  T_20.java  T_21.java  T_22.java  T_23.java  T_24.java  T_25.java  T_26.java  T_27.java  T_28.java  T_29.java  T_3.java  T_4.java  T_5.java  T_6.java  T_7.java  T_8.java  T_9.java
course1/Discrete math/LabDM4/: Exam_1.java  Lottery_3.java  Markchain_4.java  Shooter_2.java
course1/Discrete math/LabDM5/: DKA_A.java  DKA_D.java  Equivalence_G.java  Isomorph_F.java  Minimization_H.java  NKA_B.java  NKA_E.java
course1/Discrete math/LabDM6/: Automaton_A.java  Epsilon_B.java  Useless_C.java
course2/Algorithms and Data Structures/: Coras.java
course2/Algorithms and Data Structures/LabASD1/: Problems.html  avia.in
course2/Algorithms and Data Structures/LabASD2_ShortestPaths/: CMakeLists.txt  main.cpp  Задачи - Codeforces.html
course2/Algorithms and Data Structures/LabASD3_Strings/: gen_tests_F.py
course2/Algorithms and Data Structures/LabASD4_Flow/: A_Flow.cpp  B_MinCut.cpp  CMakeLists.txt  C_Snails.cpp  D_Matching.cpp  F_Moving.cpp  G_GreatWall.cpp  H_SpaceTravels.cpp  I_Tournament.cpp  J_Cockroaches.cpp
course2/Algorithms and Data Structures/LabASD5_MinCostFlow/: A_MinCost.cpp  B_HungaryAlgorithm.cpp  CMakeLists.txt  C_CostlyLabels.cpp  D_Game.cpp  E_Salesmen.cpp
course2/MathLogic/Task1/: Makefile  (+1 more)
(+77 files in other folders)
